--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
         "postcss": "^8.4.6",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "bootstrap": "^5.2.3",
+        "datatables": "^1.10.18",
+        "jquery": "^3.6.3"
     }
 }
