Add icons to dashboard

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "bootstrap": "^5.2.3",
+        "bootstrap-icons": "^1.10.3",
         "chart.js": "^4.2.1",
         "datatables": "^1.10.18",
         "datatables.net-dt": "^1.13.3",
